# poochon-backtest-data

./: .gitignore  Dockerfile  README.md  pyproject.toml
infra/access/: Pulumi.yaml  __main__.py  pyproject.toml
infra/core/: Pulumi.yaml  __main__.py  pyproject.toml
infra/read/: Pulumi.yaml  __main__.py  pyproject.toml
infra/runtime/: Pulumi.yaml  __main__.py  pyproject.toml
infra/shared/: Pulumi.yaml  __main__.py  pyproject.toml
infra/write/: Pulumi.yaml  __main__.py  pyproject.toml
scripts/: migrate-infra.sh
src/poochon_backtest_data/: __init__.py  api.py  canonical.py  cli.py  golden.py  hyperliquid.py  models.py  pmxt.py  polymarket_metadata.py  polymarket_telonex.py  service.py  settings.py  storage.py
src/poochon_backtest_data/commands/: __init__.py  _session.py  api.py  data.py  infra.py  job.py  legacy.py  run.py  schedule.py  submit.py  validate.py
tests/: test_api.py  test_commands_run.py  test_commands_submit.py  test_hyperliquid.py  test_hyperliquid_parsers.py  test_lifecycle_state_machine.py  test_materialize.py  test_models.py  test_pm_golden_validation.py  test_pm_slice_translation.py  test_polymarket_metadata.py  test_polymarket_telonex.py  test_service.py  test_storage_queries.py
